# rusterer

./: .gitignore  Cargo.toml  notes.md  readme.md
old/: context.rs  index_buffer.rs  main.rs  renderer.rs
res/shaders/: texture.frag.glsl  texture.vert.glsl  triangle.frag.glsl
src/: boid.rs  buffer.rs  context.rs  glium.rs  index_buffer.rs  main.rs  renderer.rs  sdl2_context.rs  shader.rs  shader_program.rs  texture.rs  uniform.rs  vertex_array.rs  vertex_attribute.rs  vertex_buffer.rs  vertex_layout.rs
