[package]
name = "rusterer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.glow]
version = "*"

[dependencies.sdl2]
version = "*"

[dependencies.log]
version = "*"

[dependencies.env_logger]
version = "*"
